[package]
name = "creditchain-api"
description = "CreditChain REST API"
version = "0.2.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-api-types = { workspace = true }
creditchain-bcs-utils = { workspace = true }
creditchain-build-info = { workspace = true }
creditchain-config = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-gas-schedule = { workspace = true }
creditchain-global-constants = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-mempool = { workspace = true }
creditchain-metrics-core = { workspace = true }
creditchain-runtimes = { workspace = true }
creditchain-sdk = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-types = { workspace = true }
creditchain-vm = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
mini-moka = { workspace = true }
move-core-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
creditchain-api-test-context = { workspace = true }
creditchain-cached-packages = { workspace = true }
creditchain-framework = { workspace = true }
creditchain-gas-meter = { workspace = true }
creditchain-gas-schedule = { workspace = true, features = ["testing"] }
creditchain-move-stdlib = { workspace = true }
creditchain-proptest-helpers = { workspace = true }
creditchain-transaction-filters = { workspace = true, features = ["fuzzing"] }
move-package = { workspace = true }
passkey-types = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["mime"]
