[package]
name = "creditchain-config"
description = "CreditChain config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-global-constants = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-secure-storage = { workspace = true }
creditchain-short-hex-str = { workspace = true }
creditchain-temppath = { workspace = true }
creditchain-transaction-filters = { workspace = true }
creditchain-types = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
get_if_addrs = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
creditchain-crypto = { workspace = true }
creditchain-types = { workspace = true, features = ["fuzzing"] }
tempfile = { workspace = true }

[features]
default = []
failpoints = []
fuzzing = ["creditchain-crypto/fuzzing", "creditchain-types/fuzzing"]
smoke-test = []
testing = []
tokio-console = []

[package.metadata.cargo-machete]
ignored = ["strum"]
