[package]
name = "creditchain-consensus"
description = "CreditChain consensus"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-bitvec = { workspace = true }
creditchain-bounded-executor = { workspace = true }
creditchain-channels = { workspace = true }
creditchain-collections = { workspace = true }
creditchain-config = { workspace = true }
creditchain-consensus-notifications = { workspace = true }
creditchain-consensus-types = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-crypto-derive = { workspace = true }
creditchain-dkg = { workspace = true }
creditchain-enum-conversion-derive = { workspace = true }
creditchain-event-notifications = { workspace = true }
creditchain-executor = { workspace = true }
creditchain-executor-types = { workspace = true }
creditchain-experimental-runtimes = { workspace = true }
creditchain-fallible = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-mempool = { workspace = true }
creditchain-metrics-core = { workspace = true }
creditchain-network = { workspace = true }
creditchain-peer-monitoring-service-types = { workspace = true }
creditchain-reliable-broadcast = { workspace = true }
creditchain-runtimes = { workspace = true }
creditchain-safety-rules = { workspace = true }
creditchain-schemadb = { workspace = true }
creditchain-secure-storage = { workspace = true }
creditchain-short-hex-str = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-temppath = { workspace = true }
creditchain-time-service = { workspace = true }
creditchain-transaction-filters = { workspace = true }
creditchain-types = { workspace = true }
creditchain-validator-transaction-pool = { workspace = true }
creditchain-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
move-core-types = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
creditchain-cached-packages = { workspace = true }
creditchain-config = { workspace = true, features = ["fuzzing"] }
creditchain-consensus-types = { workspace = true, features = ["fuzzing"] }
creditchain-executor-test-helpers = { workspace = true }
creditchain-keygen = { workspace = true }
creditchain-mempool = { workspace = true, features = ["fuzzing"] }
creditchain-netcore = { workspace = true }
creditchain-network = { workspace = true, features = ["fuzzing"] }
creditchain-safety-rules = { workspace = true, features = ["testing"] }
creditchain-transaction-filters = { workspace = true, features = ["fuzzing"] }
creditchain-types = { workspace = true, features = ["testing"] }
creditchain-vm = { workspace = true, features = ["fuzzing"] }
creditchain-vm-validator = { workspace = true }
claims = { workspace = true }
mockall = { workspace = true }
move-core-types = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = [
    "creditchain-consensus-types/fuzzing",
    "creditchain-config/fuzzing",
    "creditchain-crypto/fuzzing",
    "creditchain-mempool/fuzzing",
    "creditchain-types/fuzzing",
    "creditchain-safety-rules/testing",
]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[lints.clippy]
unwrap_used = "deny"
