[package]
name = "creditchain-node"
description = "CreditChain node"
version = "0.0.0-main"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-admin-service = { workspace = true }
creditchain-api = { workspace = true }
creditchain-backup-service = { workspace = true }
creditchain-build-info = { workspace = true }
creditchain-cached-packages = { workspace = true }
creditchain-channels = { workspace = true }
creditchain-config = { workspace = true }
creditchain-consensus = { workspace = true }
creditchain-consensus-notifications = { workspace = true }
creditchain-crash-handler = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-data-client = { workspace = true }
creditchain-data-streaming-service = { workspace = true }
creditchain-db = { workspace = true }
creditchain-db-indexer = { workspace = true }
creditchain-dkg-runtime = { workspace = true }
creditchain-event-notifications = { workspace = true }
creditchain-executor = { workspace = true }
creditchain-framework = { workspace = true }
creditchain-genesis = { workspace = true }
creditchain-indexer = { workspace = true, optional = true }
creditchain-indexer-grpc-fullnode = { workspace = true }
creditchain-indexer-grpc-table-info = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-inspection-service = { workspace = true }
creditchain-jwk-consensus = { workspace = true }
creditchain-logger = { workspace = true, features = ["node-identity"] }
creditchain-mempool = { workspace = true }
creditchain-mempool-notifications = { workspace = true }
creditchain-network = { workspace = true }
creditchain-network-benchmark = { workspace = true }
creditchain-network-builder = { workspace = true }
creditchain-node-identity = { workspace = true }
creditchain-peer-monitoring-service-client = { workspace = true }
creditchain-peer-monitoring-service-server = { workspace = true }
creditchain-peer-monitoring-service-types = { workspace = true }
creditchain-runtimes = { workspace = true }
creditchain-state-sync-driver = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-storage-service-client = { workspace = true }
creditchain-storage-service-notifications = { workspace = true }
creditchain-storage-service-server = { workspace = true }
creditchain-storage-service-types = { workspace = true }
creditchain-telemetry = { workspace = true }
creditchain-temppath = { workspace = true }
creditchain-time-service = { workspace = true }
# creditchain-types = { workspace = true }
creditchain-types = { workspace = true }
creditchain-validator-transaction-pool = { workspace = true }
creditchain-vm = { workspace = true }
creditchain-vm-environment = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rlimit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rstack-self = { workspace = true }

[features]
assert-private-keys-not-cloneable = ["creditchain-crypto/assert-private-keys-not-cloneable"]
check-vm-features = []
consensus-only-perf-test = ["creditchain-executor/consensus-only-perf-test", "creditchain-mempool/consensus-only-perf-test", "creditchain-db/consensus-only-perf-test"]
default = []
failpoints = ["fail/failpoints", "creditchain-consensus/failpoints", "creditchain-executor/failpoints", "creditchain-mempool/failpoints", "creditchain-api/failpoints", "creditchain-config/failpoints"]
indexer = ["creditchain-indexer"]
tokio-console = ["creditchain-logger/tokio-console", "creditchain-config/tokio-console"]
smoke-test = ["creditchain-jwk-consensus/smoke-test", "creditchain-dkg-runtime/smoke-test"]

[package.metadata.cargo-machete]
ignored = ["creditchain-crypto"]
