[package]
name = "creditchain-dkg-runtime"
description = "CreditChain DKG runtime"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-bounded-executor = { workspace = true }
creditchain-channels = { workspace = true }
creditchain-config = { workspace = true }
creditchain-consensus-types = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-crypto-derive = { workspace = true }
creditchain-enum-conversion-derive = { workspace = true }
creditchain-event-notifications = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-metrics-core = { workspace = true }
creditchain-network = { workspace = true }
creditchain-reliable-broadcast = { workspace = true }
creditchain-runtimes = { workspace = true }
creditchain-safety-rules = { workspace = true }
creditchain-time-service = { workspace = true }
creditchain-types = { workspace = true }
creditchain-validator-transaction-pool = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
creditchain-types = { workspace = true, features = ["testing"] }

[features]
smoke-test = []
