[package]
name = "creditchain-mempool"
description = "CreditChain mempool for consuming incoming transactions"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-bounded-executor = { workspace = true }
creditchain-channels = { workspace = true }
creditchain-config = { workspace = true }
creditchain-consensus-types = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-event-notifications = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-mempool-notifications = { workspace = true }
creditchain-metrics-core = { workspace = true }
creditchain-netcore = { workspace = true }
creditchain-network = { workspace = true }
creditchain-peer-monitoring-service-types = { workspace = true }
creditchain-runtimes = { workspace = true }
creditchain-short-hex-str = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-time-service = { workspace = true }
creditchain-transaction-filters = { workspace = true }
creditchain-types = { workspace = true }
creditchain-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
creditchain-compression = { workspace = true }
creditchain-config = { workspace = true }
creditchain-id-generator = { workspace = true }
creditchain-network = { workspace = true, features = ["fuzzing"] }
creditchain-storage-interface = { workspace = true, features = ["fuzzing"] }
creditchain-time-service = { workspace = true, features = ["testing"] }
creditchain-transaction-filters = { workspace = true, features = ["fuzzing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "creditchain-vm-validator/failpoints"]
fuzzing = ["proptest", "creditchain-types/fuzzing", "creditchain-storage-interface/fuzzing", "creditchain-config/fuzzing"]
consensus-only-perf-test = []
