[package]
name = "creditchain-vm-validator"
description = "CreditChain vm validator"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-types = { workspace = true }
creditchain-vm = { workspace = true }
creditchain-vm-environment = { workspace = true }
creditchain-vm-logging = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
creditchain-cached-packages = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-db = { workspace = true }
creditchain-executor-test-helpers = { workspace = true }
creditchain-gas-schedule = { workspace = true, features = ["testing"] } 
creditchain-temppath = { workspace = true }
creditchain-types = { workspace = true, features = ["testing"] }
creditchain-vm-genesis = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["creditchain-types/fuzzing", "creditchain-crypto/fuzzing", "creditchain-db/fuzzing"]
