[package]
name = "creditchain-openapi-spec-generator"
description = "CreditChain API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-api = { workspace = true }
creditchain-config = { workspace = true }
creditchain-mempool = { workspace = true, features = ["fuzzing"] }
creditchain-storage-interface = { workspace = true }
creditchain-types = { workspace = true }
clap = { workspace = true }
