[package]
name = "creditchain-api-test-context"
description = "CreditChain API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
creditchain-api = { workspace = true }
creditchain-api-types = { workspace = true }
creditchain-cached-packages = { workspace = true }
creditchain-config = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-db = { workspace = true, features = ["fuzzing"] }
creditchain-executor = { workspace = true }
creditchain-executor-types = { workspace = true }
creditchain-framework = { workspace = true }
creditchain-genesis = { workspace = true }
creditchain-indexer-grpc-table-info = { workspace = true }
creditchain-mempool = { workspace = true, features = ["fuzzing"] }
creditchain-mempool-notifications = { workspace = true }
creditchain-sdk = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-temppath = { workspace = true }
creditchain-types = { workspace = true }
creditchain-vm = { workspace = true }
creditchain-vm-logging = { workspace = true }
creditchain-vm-validator = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
