[package]
name = "creditchain-consensus-types"
description = "CreditChain consensus types"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-bitvec = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-crypto-derive = { workspace = true }
creditchain-executor-types = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-short-hex-str = { workspace = true }
creditchain-types = { workspace = true }
bcs = { workspace = true }
derivative = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
creditchain-types = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["proptest", "creditchain-types/fuzzing", "creditchain-crypto/fuzzing"]
