[package]
name = "creditchain-safety-rules"
description = "CreditChain safety rules"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
creditchain-config = { workspace = true }
creditchain-consensus-types = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-global-constants = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-metrics-core = { workspace = true }
creditchain-secure-net = { workspace = true }
creditchain-secure-storage = { workspace = true }
creditchain-types = { workspace = true }
creditchain-vault-client = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
creditchain-config = { workspace = true, features = ["fuzzing"] }
creditchain-consensus-types = { workspace = true, features = ["fuzzing"] }
creditchain-proptest-helpers = { workspace = true }
creditchain-secure-storage = { workspace = true, features = ["testing"] }
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "safety_rules"
harness = false
required-features = ["testing"]

[features]
default = []
fuzzing = ["creditchain-consensus-types/fuzzing", "creditchain-config/fuzzing", "proptest"]
testing = ["creditchain-secure-storage/testing"]
