[package]
name = "creditchain-channels"
description = "An implementation of a channel with configurable QoS"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-metrics-core = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
creditchain-types = { workspace = true }
tokio = { workspace = true }
