[package]
name = "creditchain-api-tester"
description = "CreditChain developer API tester"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-api-types = { workspace = true }
creditchain-cached-packages = { workspace = true }
creditchain-framework = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-push-metrics = { workspace = true }
creditchain-rest-client = { workspace = true }
creditchain-sdk = { workspace = true }
creditchain-types = { workspace = true }
futures = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
