[package]
name = "creditchain-drop-helper"
description = "CreditChain Drop Helper"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
creditchain-infallible = { workspace = true }
creditchain-metrics-core = { workspace = true }
once_cell = { workspace = true }
threadpool = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
