[package]
name = "creditchain-genesis"
description = "A tool to manage genesis"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-cached-packages = { workspace = true }
creditchain-config = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-db = { workspace = true }
creditchain-executor = { workspace = true }
creditchain-framework = { workspace = true }
creditchain-keygen = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-temppath = { workspace = true }
creditchain-types = { workspace = true }
creditchain-vm = { workspace = true }
creditchain-vm-genesis = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
creditchain-config = { workspace = true }

[features]
testing = []
fuzzing = ["creditchain-config/fuzzing"]
