[package]
name = "creditchain-inspection-service"
description = "The Node Inspection Service"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-build-info = { workspace = true }
creditchain-config = { workspace = true }
creditchain-data-client = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-metrics-core = { workspace = true }
creditchain-network = { workspace = true }
creditchain-runtimes = { workspace = true }
creditchain-storage-interface = { workspace = true }
creditchain-storage-service-client = { workspace = true }
creditchain-telemetry = { workspace = true }
creditchain-time-service = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
creditchain-time-service = { workspace = true, features = ["testing"] }
assert_approx_eq = { workspace = true }
rusty-fork = { workspace = true }
