[package]
name = "creditchain-keygen"
description = "Command line utility to generate Ed25519 key pairs for testing"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
creditchain-crypto = { workspace = true }
creditchain-types = { workspace = true }
rand = { workspace = true }

