[package]
name = "creditchain-ledger"
description = "Library for integration with the CreditChain app on Ledger"
version = "0.2.1"
publish = true

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = "https://github.com/ibankio/creditchain/tree/main/crates/creditchain-ledger"
rust-version = { workspace = true }

[dependencies]
creditchain-crypto = { workspace = true }
creditchain-types = { workspace = true }
hex = { workspace = true }
ledger-apdu = "0.10.0"
ledger-transport-hid = "0.10.0"
thiserror = { workspace = true }
