[package]
name = "creditchain-network-checker"
description = "CreditChain network checker"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-config = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-network = { workspace = true }
creditchain-types = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

