[package]
name = "creditchain-rate-limiter"
description = "Token bucket rate limiter"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-metrics-core = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

